refactors to use QuickPID library

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = bxparks/AceButton@^1.8.2
+lib_ldf_mode = chain+
+lib_deps = 
+    bxparks/AceButton@^1.8.2
+    https://github.com/Dlloydev/QuickPID
