Uses more accurate ADC approach for pressure sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,6 @@ framework = arduino
 monitor_speed = 115200
 lib_ldf_mode = chain+
 lib_deps = 
-    bxparks/AceButton@^1.8.2
-    https://github.com/Dlloydev/QuickPID
+	bxparks/AceButton@^1.8.2
+	https://github.com/Dlloydev/QuickPID
+	madhephaestus/ESP32AnalogRead@^0.1.1
