--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 	bxparks/AceButton@^1.8.2
 	https://github.com/Dlloydev/QuickPID
 	madhephaestus/ESP32AnalogRead@^0.1.1
+debug_tool = esp-prog
+debug_init_break = tbreak setup
+upload_port = /dev/cu.SLAB_USBtoUART
