Improves pressure and temperature PID tuning.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,8 @@ monitor_speed = 115200
 lib_ldf_mode = chain+
 lib_deps = 
 	bxparks/AceButton@^1.8.2
-	https://github.com/Dlloydev/QuickPID
 	madhephaestus/ESP32AnalogRead@^0.1.1
+	robtillaart/RunningAverage@^0.4.0
+	dlloydev/QuickPID@^2.4.7
 debug_tool = esp-prog
 debug_init_break = tbreak setup
