Add smoothing to flow sensor reading

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,6 @@ lib_deps =
 	madhephaestus/ESP32AnalogRead@^0.1.1
 	robtillaart/RunningAverage@^0.4.0
 	dlloydev/QuickPID@^2.4.7
+	mattfryer/Smoothed@^1.2
 debug_tool = esp-prog
 debug_init_break = tbreak setup
