Test using PSM library for pump modulation.

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,7 @@ lib_deps =
 	madhephaestus/ESP32AnalogRead@^0.1.1
 	robtillaart/RunningAverage@^0.4.0
 	dlloydev/QuickPID@^2.4.7
+	ingelobito/RBDdimmer@^1.0
+	https://github.com/banoz/PSM.Library.git
 debug_tool = esp-prog
 debug_init_break = tbreak setup
