--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 lib_ldf_mode = chain+
 lib_deps = 
 	bxparks/AceButton@^1.8.2
