Add temporal dithering to PSM. Attempt to improve intermittent plf2000 i2c connection hangs

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 921600
+upload_speed = 921600
+monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = chain+
 lib_deps = 
